--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Hello! I am crypt!</h1>
         <p>Im a full stack HTML, CSS, and Javascript Developer! DM me on these socials for any commissions</p>
         <div class="row">
-            <a href="#">Discord Server</a>
+            <a href="https://discord.gg/cNsRGcMTkf">Discord Server</a>
             <a href="https://twitter.com/cryptixrune">Twitter</a>
             <a href="https://instagram.com/cryptixrune">Instagram</a>
             <a href="https://github.com/cryptixrune">Github</a>
