--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptixRune</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="main">
-        <h1>Hello! I am crypt!</h1>
-        <p>Im a full stack HTML, CSS, and Javascript Developer! DM me on these socials for any commissions</p>
-        <div class="row">
-            <a href="https://discord.gg/cNsRGcMTkf">Discord Server</a>
-            <a href="https://twitter.com/cryptixrune">Twitter</a>
-            <a href="https://instagram.com/cryptixrune">Instagram</a>
-            <a href="https://github.com/cryptixrune">Github</a>
+      <h1>Hello! I am crypt!</h1>
+      <p class="sub-text">
+        Im a JavaScript, HTML, and CSS developer. I also know a little java and python. DM me for commissions on these socials below. You can also check out my projects so you know what i do!
+      </p>
+      <div class="row">
+        <a href="#">Discord</a>
+        <a href="https://twitter.com/cryptixrune">Twitter</a>
+        <a href="https://github.com/cryptixrune">Github</a>
+      </div>
+      <div class="card-container">
+        <div class="card">
+          <h2>The Furry Oasis</h2>
+          <img
+            src="https://cdn.discordapp.com/icons/1005233388665442334/f62c58498da87f64fb4d368fa9452009.png?size=1024"
+            alt=""
+          />
+          <a href="https://crypt.is-a.dev/oasis">Visit Website</a>
         </div>
+        <div class="card">
+          <h2>Coming Soon</h2>
+          <img
+            src="https://dummyimage.com/500x500/000000/fff.png"
+            alt=""
+          />
+          <a href="#">Visit Website</a>
+        </div>
+        <div class="card">
+          <h2>Coming Soon</h2>
+          <img
+            src="https://dummyimage.com/500x500/000000/fff.png"
+            alt=""
+          />
+          <a href="#">Visit Website</a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
