add site desc and favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptixRune</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="description" content="Hello! I am crypt, im a JavaScript, HTML, and CSS developer. I also...">
+    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/avatars/1072665577585393705/7f949a82c67480f4108a540860b85c11.png?size=4096">
   </head>
   <body>
     <div class="main">
