--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptixRune</title>
     <link rel="stylesheet" href="./style.css" />
-    <meta name="description" content="Hello! I am crypt, im a JavaScript, HTML, and CSS developer. I also...">
-    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/avatars/1072665577585393705/7f949a82c67480f4108a540860b85c11.png?size=4096">
+    <meta
+      name="description"
+      content="Hello! I am crypt, im a JavaScript, HTML, and CSS developer. I also..."
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://cdn.discordapp.com/avatars/1072665577585393705/7f949a82c67480f4108a540860b85c11.png?size=4096"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <div class="main">
-      <h1>Hello! I am crypt!</h1>
+      <h1>Hello, i am crypt!</h1>
       <p class="sub-text">
-        Im a JavaScript, HTML, and CSS developer. I also know a little java and python. DM me for commissions on these socials below. You can also check out my projects so you know what i do!
+        Im a JavaScript, HTML, and CSS developer. I also know a little java and
+        python. DM me for commissions on these socials below. You can also check
+        out my projects so you know what i do!
       </p>
       <div class="row">
         <a href="#">Discord</a>
@@ -21,29 +34,31 @@
         <a href="https://github.com/cryptixrune">Github</a>
       </div>
       <div class="card-container">
-        <div class="card">
-          <h2>The Furry Oasis</h2>
-          <img
-            src="https://cdn.discordapp.com/icons/1005233388665442334/f62c58498da87f64fb4d368fa9452009.png?size=1024"
-            alt=""
-          />
-          <a href="https://crypt.is-a.dev/oasis">Visit Website</a>
+        <!--First column-->
+        <div id="column">
+          <div class="card">
+            <h3>The Furry Oasis</h3>
+            <img src="https://cdn.discordapp.com/icons/1005233388665442334/f62c58498da87f64fb4d368fa9452009.png?size=1024" alt="" />
+            <a href="https://crypt.is-a.dev/oasis">Visit Website</a>
+          </div>
         </div>
-        <div class="card">
-          <h2>Coming Soon</h2>
-          <img
-            src="https://dummyimage.com/500x500/000000/fff.png"
-            alt=""
-          />
-          <a href="#">Visit Website</a>
+
+        <!--Second column-->
+        <div id="column-2">
+          <div class="card">
+            <h3>Coming Soon</h3>
+            <img src="https://dummyimage.com/500x500/000000/fff.png" alt="" />
+            <a href="#">Visit Website</a>
+          </div>
         </div>
-        <div class="card">
-          <h2>Coming Soon</h2>
-          <img
-            src="https://dummyimage.com/500x500/000000/fff.png"
-            alt=""
-          />
-          <a href="#">Visit Website</a>
+
+        <!--Third column-->
+        <div id="column-3">
+          <div class="card">
+            <h3>Coming Soon</h3>
+            <img src="https://dummyimage.com/500x500/000000/fff.png" alt="" />
+            <a href="#">Visit Website</a>
+          </div>
         </div>
       </div>
     </div>
