--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main">
-      <h1>Hello, i am crypt!</h1>
+      <h1>Hello, i am lunar!</h1>
       <p class="sub-text">
         Im a JavaScript, HTML, and CSS developer. I also know a little java and
         python. DM me for commissions on these socials below. You can also check
@@ -37,9 +37,9 @@
         <!--First column-->
         <div id="column">
           <div class="card">
-            <h3>The Furry Oasis</h3>
-            <img src="https://cdn.discordapp.com/icons/1005233388665442334/f62c58498da87f64fb4d368fa9452009.png?size=1024" alt="" />
-            <a href="https://crypt.is-a.dev/oasis">Visit Website</a>
+            <h3>Coming Soon</h3>
+            <img src="https://dummyimage.com/500x500/000000/fff.png" alt="" />
+            <a href="#">Visit Website</a>
           </div>
         </div>
 
