--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
         <!--First column-->
         <div id="column">
           <div class="card">
-            <h3>Coming Soon</h3>
-            <img src="https://dummyimage.com/500x500/000000/fff.png" alt="" />
-            <a href="#">Visit Website</a>
+            <h3>The Furry Oasis</h3>
+            <img src="https://cdn.discordapp.com/icons/1005233388665442334/f62c58498da87f64fb4d368fa9452009.png" alt="" />
+            <a href="./oasis/index.html">Visit Website</a>
           </div>
         </div>
 
         <!--Second column-->
         <div id="column-2">
           <div class="card">
-            <h3>Coming Soon</h3>
-            <img src="https://dummyimage.com/500x500/000000/fff.png" alt="" />
-            <a href="#">Visit Website</a>
+            <h3>Sweets N Sonas</h3>
+            <img src="https://pbs.twimg.com/profile_images/1639496246422298625/eZWP_yD3_400x400.jpg" alt="" />
+            <a href="./sns/index.html">Visit Website</a>
           </div>
         </div>
 
