--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main">
-      <h1>Hello, i am lunar!</h1>
+      <h1>Hello, i am crypt!</h1>
       <p class="sub-text">
         Im a JavaScript, HTML, and CSS developer. I also know a little java and
         python. DM me for commissions on these socials below. You can also check
