--- a/sns/index.html
+++ b/sns/index.html
@@ -7,6 +7,12 @@
     <title>Sweets n Sonas</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <meta name="description" content="A fursona adopt duo ran by Fae_fur. We create professional and well-made Fursonas based off desserts!"/>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://pbs.twimg.com/profile_images/1639496246422298625/eZWP_yD3_400x400.jpg"
+    />
   </head>
   <body>
     <!-- Navbar -->
